[package]
name = "minecraft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.8", features = ["dynamic"]}
bevy-inspector-egui = "0.12.1"
bevy_flycam = "0.8.1"
image = "0.24.3"
noise = "0.7.0"
rand = "0.8.5"
rand_pcg = "0.3.1"
rand_seeder = "0.2.3"
rand_xorshift = "0.3.0"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1 

# Enable high optimization fore dependencies
[profile.dev.package."*"]
opt-level = 3
